# autonomous-trading-system

./: .gitignore  PROJECT_REQUIREMENTS.md  README.md  SYSTEM_ARCHITECTURE.md  model_decisions.md  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
src/trading_analysis/: crew.py  main.py  network.py
src/trading_analysis/config/: agents.yaml  tasks.yaml
src/trading_analysis/tools/: calculator_tool.py  execution_tool.py  portfolio_tool.py  sec_tools.py  test.py
